--- a/busca-foto-backend/package.json
+++ b/busca-foto-backend/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
@@ -8,15 +9,22 @@
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
+    "axios": "^1.6.8",
+    "express": "^4.19.2",
+    "react-dotenv": "^0.1.3",
     "undici-types": "^5.26.5"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/app.js",
+    "build": "react-dotenv && tsc",
+    "start": "react-dotenv && node dist/app.js",
     "start:dev": "ts-node src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+
+  "react-dotenv": {
+    "whitelist": ["PEXELS_KEY"]
+  }
 }
