--- a/busca-foto-backend/package.json
+++ b/busca-foto-backend/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.8",
     "ts-node": "^10.9.2",
@@ -10,6 +11,7 @@
   "main": "app.js",
   "dependencies": {
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "react-dotenv": "^0.1.3",
     "undici-types": "^5.26.5"
@@ -23,8 +25,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
-
   "react-dotenv": {
-    "whitelist": ["PEXELS_KEY"]
+    "whitelist": [
+      "PEXELS_KEY"
+    ]
   }
 }
